cmake_minimum_required(VERSION 3.10)
project(design_patterns)

add_subdirectory(abstract_factory)
add_subdirectory(adapter)
add_subdirectory(bridge)
add_subdirectory(builder)
add_subdirectory(chain_of_responsibility)
add_subdirectory(command)
add_subdirectory(composite)
add_subdirectory(decorator)
add_subdirectory(facade)
add_subdirectory(factory_method)
add_subdirectory(flyweight)
add_subdirectory(interpreter)
add_subdirectory(iterator)
add_subdirectory(mediator)
add_subdirectory(memento)
add_subdirectory(observer)
add_subdirectory(prototype)
add_subdirectory(proxy)
add_subdirectory(singleton)
add_subdirectory(state)
add_subdirectory(strategy)
add_subdirectory(template_method)
add_subdirectory(visitor)